--- a/app/src/main/res/layout/activity_timkiem.xml
+++ b/app/src/main/res/layout/activity_timkiem.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    tools:context=".TimkiemActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -13,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
-        android:text="Nghe ngay"
+        android:text="Tim kiem"
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/botNavView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,6 +31,6 @@
         app:menu="@menu/bottom_nav_menu"
 
 
-
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
