--- a/app/src/main/res/drawable/bg_last_item.xml
+++ b/app/src/main/res/drawable/bg_last_item.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#e9e9e9" />
-    <corners android:radius="15dp" />
+    <solid android:color="#FFFFFF" />
+    <corners android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"/>
 </shape>
