--- a/app/src/main/res/layout/fragment_nghe_ngay.xml
+++ b/app/src/main/res/layout/fragment_nghe_ngay.xml
@@ -35,6 +35,7 @@
                             android:src="@drawable/chevron_left" />
 
                         <ImageButton
+                            android:id="@+id/addBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="15dp"
@@ -42,10 +43,12 @@
                             android:src="@drawable/add" />
 
                         <ImageButton
+                            android:id="@+id/moreHorizBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/bg_icon_circle"
-                            android:src="@drawable/more_horiz" />
+                            android:src="@drawable/more_horiz"
+                            android:layout_alignParentRight="true"/>
 
                     </LinearLayout>
 
