--- a/app/src/main/res/layout/list_opisode.xml
+++ b/app/src/main/res/layout/list_opisode.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingHorizontal="10dp">
 
@@ -32,8 +33,9 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/play_arrow_purple"
-        android:background="@drawable/bg_icon_circle"/>
+        android:background="@drawable/bg_icon_circle"
+        android:backgroundTint="#E9E8E9"
+        android:src="@drawable/play_arrow_purple" />
 
 
 </LinearLayout>
