--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="super_light_gray">#e2e2e2</color>
     <color name="dark_gray">#3e3d3d</color>
     <color name="voilet">#7a31d6</color>
+    <color name="red">#ff0000</color>
 </resources>
