--- a/app/src/main/res/layout/fragment_nghe_ngay.xml
+++ b/app/src/main/res/layout/fragment_nghe_ngay.xml
@@ -28,6 +28,7 @@
                         android:orientation="horizontal">
 
                         <ImageButton
+                            android:id="@+id/ibBack"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="270dp"
