--- a/app/src/main/res/layout/fragment_nghe_ngay.xml
+++ b/app/src/main/res/layout/fragment_nghe_ngay.xml
@@ -133,9 +133,295 @@
                 </LinearLayout>
 
                 <ListView
-                    android:id="@+id/listView"
+                    android:id="@+id/lvListEpisode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#000000"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="15dp"
+                        android:text="Xếp hạng &amp; nhận xét"
+                        android:textColor="@color/white"
+                        android:textSize="25dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="25dp"
+                        android:text="Xem tất cả"
+                        android:textColor="#894cd2"
+                        android:textSize="20dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="110dp"
+                        android:layout_height="90dp"
+                        android:layout_marginTop="15dp"
+                        android:text="4,5"
+                        android:textColor="@color/light_gray"
+                        android:textSize="70dp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="@+id/textView2"
+                        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="/5"
+                        android:textColor="@color/light_gray"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="@+id/textView3"
+                        app:layout_constraintStart_toStartOf="@+id/textView3"
+                        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+<!--                    5 star-->
+                    <ProgressBar
+                        android:id="@+id/pb5start"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="150dp"
+                        android:layout_height="12dp"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/light_gray"
+                        android:indeterminateTintMode="src_atop"
+                        app:layout_constraintEnd_toEndOf="@+id/textView5"
+                        app:layout_constraintTop_toTopOf="@+id/textView3" />
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_marginEnd="15dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/pb5start"
+                        app:layout_constraintTop_toTopOf="@+id/pb5start"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView1"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView"
+                        app:layout_constraintTop_toTopOf="@+id/imageView"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView1"
+                        app:layout_constraintTop_toTopOf="@+id/imageView1"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                        app:layout_constraintTop_toTopOf="@+id/imageView2"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                        app:layout_constraintTop_toTopOf="@+id/imageView3"
+                        app:tint="@color/light_gray" />
+
+<!--                    4 star-->
+                    <ProgressBar
+                        android:id="@+id/pb4start"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="150dp"
+                        android:layout_height="12dp"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/light_gray"
+                        android:indeterminateTintMode="src_atop"
+                        app:layout_constraintEnd_toEndOf="@+id/pb5start"
+                        app:layout_constraintTop_toBottomOf="@+id/pb5start" />
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_marginEnd="15dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/pb4start"
+                        app:layout_constraintTop_toTopOf="@+id/pb4start"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView6"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView5"
+                        app:layout_constraintTop_toTopOf="@+id/imageView5"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView7"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView6"
+                        app:layout_constraintTop_toTopOf="@+id/imageView6"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView8"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+                        app:layout_constraintTop_toTopOf="@+id/imageView7"
+                        app:tint="@color/light_gray" />
+
+<!--                    3star-->
+                    <ProgressBar
+                        android:id="@+id/pb3start"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="150dp"
+                        android:layout_height="12dp"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/light_gray"
+                        android:indeterminateTintMode="src_atop"
+                        app:layout_constraintEnd_toEndOf="@+id/pb4start"
+                        app:layout_constraintTop_toBottomOf="@+id/pb4start" />
+                    <ImageView
+                        android:id="@+id/imageView9"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_marginEnd="15dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/pb3start"
+                        app:layout_constraintTop_toTopOf="@+id/pb3start"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView10"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView9"
+                        app:layout_constraintTop_toTopOf="@+id/imageView9"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView11"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView10"
+                        app:layout_constraintTop_toTopOf="@+id/imageView10"
+                        app:tint="@color/light_gray" />
+
+<!--                    2star-->
+                    <ProgressBar
+                        android:id="@+id/pb2start"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="150dp"
+                        android:layout_height="12dp"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/light_gray"
+                        android:indeterminateTintMode="src_atop"
+                        app:layout_constraintEnd_toEndOf="@+id/pb3start"
+                        app:layout_constraintTop_toBottomOf="@+id/pb3start" />
+                    <ImageView
+                        android:id="@+id/imageView12"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_marginEnd="15dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/pb2start"
+                        app:layout_constraintTop_toTopOf="@+id/pb2start"
+                        app:tint="@color/light_gray" />
+                    <ImageView
+                        android:id="@+id/imageView13"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView12"
+                        app:layout_constraintTop_toTopOf="@+id/imageView12"
+                        app:tint="@color/light_gray" />
+
+<!--                    1star-->
+                    <ProgressBar
+                        android:id="@+id/pb1start"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="150dp"
+                        android:layout_height="12dp"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/light_gray"
+                        android:indeterminateTintMode="src_atop"
+                        app:layout_constraintEnd_toEndOf="@+id/pb2start"
+                        app:layout_constraintTop_toBottomOf="@+id/pb2start" />
+                    <ImageView
+                        android:id="@+id/imageView14"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_marginEnd="15dp"
+                        android:src="@drawable/baseline_star_rate_24"
+                        app:layout_constraintEnd_toStartOf="@+id/pb1start"
+                        app:layout_constraintTop_toTopOf="@+id/pb1start"
+                        app:tint="@color/light_gray" />
+
+                    <TextView
+                        android:id="@+id/tvTotalRating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="1dp"
+                        android:text="100 lươt xếp hạng"
+                        android:textColor="@color/light_gray"
+                        android:textSize="18dp"
+                        app:layout_constraintEnd_toEndOf="@+id/textView5"
+                        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="376dp"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@color/dark_gray"
+                        app:layout_constraintEnd_toEndOf="@+id/tvTotalRating"
+                        app:layout_constraintStart_toStartOf="@+id/textView3"
+                        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/vpReview"
+                        android:layout_width="match_parent"
+                        android:layout_height="213dp"
+                        android:layout_marginTop="15dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/view" />
+
+                    <TextView
+                        android:id="@+id/tvMakeReview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:text="Viết nhận xét"
+                        android:textColor="@color/violet"
+                        android:textSize="20dp"
+                        app:layout_constraintStart_toStartOf="@+id/textView2"
+                        app:layout_constraintTop_toBottomOf="@+id/vpReview" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
             </LinearLayout>
         </ScrollView>
 </LinearLayout>
